--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Stella D'oro</title>
+    <title>Stella D'oro 1234</title>
     <link rel="stylesheet" href="stella/styles.css">
     <link rel="icon" href="favicon.ico">
   </head>
