--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stella D'oro</title>
-    <link rel="stylesheet" href="stella/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="favicon.ico">
   </head>
 
@@ -18,7 +18,7 @@
 
 
       <div class="woman-continer">
-    <img class= "woman" src="stella/woman.jpg" alt="mountain-img" width: "500px", hight: "800px">
+    <img class= "woman" src="/woman.jpg" alt="mountain-img" width: "500px", hight: "800px">
 
   <img class= "woman" src="images/baby.jpg" alt="mountain-img" width: "500px", hight: "800px">
     <img class= "woman" src="images/girl.jpg" alt="mountain-img" width: "500px", hight: "800px">
