--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="woman-continer">
     <img class= "woman" src="woman.jpg" alt="mountain-img" width: "500px", hight: "800px">
 
-  <img class= "woman" src="images/baby.jpg" alt="mountain-img" width: "500px", hight: "800px">
-    <img class= "woman" src="images/girl.jpg" alt="mountain-img" width: "500px", hight: "800px">
-      <img class= "woman" src="images/honey.jpg" alt="mountain-img" width: "500px", hight: "800px">
-      <img class= "woman" src="images/flower.jpg" alt="mountain-img" width: "500px", hight: "800px">
+  <img class= "woman" src="baby.jpg" alt="mountain-img" width: "500px", hight: "800px">
+    <img class= "woman" src="girl.jpg" alt="mountain-img" width: "500px", hight: "800px">
+      <img class= "woman" src="honey.jpg" alt="mountain-img" width: "500px", hight: "800px">
+      <img class= "woman" src="flower.jpg" alt="mountain-img" width: "500px", hight: "800px">
       </div>
     </div>
 
@@ -56,14 +56,14 @@ function showDivs(n) {
 
 
     <div class="middle-container">
-        <img class="moda" src="images/moda.png" alt="moda" width=500px; height=500px;>
+        <img class="moda" src="moda.png" alt="moda" width=500px; height=500px;>
         <h2>Hello</h2>
         <p class="phrase1">Feeling good makes you Beautiful, but good clothe is the reason of feelgood!</p>
       </div>
       <hr>
 
       <div class="about-us">
-          <img class="us" src="images/us.png" alt="us">
+          <img class="us" src="us.png" alt="us">
         <h2>Why us?</h2>
 
           <h3>because you will never ever get dissapointed!</h3>
