--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stella D'oro</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="favicon.ico">
   </head>
 
@@ -20,7 +20,7 @@
       <div class="woman-continer">
     <img class= "woman" src="woman.jpg" alt="mountain-img" width: "500px", hight: "800px">
 
-  <img class= "woman" src="baby.jpg" alt="mountain-img" width: "500px", hight: "800px">
+  <img class= "woman" src="baby.jpg" alt="baby-img" width: "500px", hight: "800px">
     <img class= "woman" src="girl.jpg" alt="mountain-img" width: "500px", hight: "800px">
       <img class= "woman" src="honey.jpg" alt="mountain-img" width: "500px", hight: "800px">
       <img class= "woman" src="flower.jpg" alt="mountain-img" width: "500px", hight: "800px">
